--- a/atomics/T1003.001/T1003.001.yaml
+++ b/atomics/T1003.001/T1003.001.yaml
@@ -37,7 +37,7 @@ atomic_tests:
     elevation_required: true
     
 - name: Dump LSASS.exe Memory using ProcDump
-  auto_generated_guid: 0be2230c-9ab3-4ac2-8826-3199b9a0ebf8
+  auto_generated_guid: 0be2230c-9ab3-4ac2-8826-3199b9a0exq9
   description: |
     The memory of lsass.exe is often dumped for offline credential theft attacks. This can be achieved with Sysinternals
     ProcDump.
